Ensure canvas-draw experiment doesn't scroll because of the address bar on mobile screens.

--- a/src/components/AnimatedCharacters/styles.module.scss
+++ b/src/components/AnimatedCharacters/styles.module.scss
@@ -4,4 +4,5 @@
 .container {
   @include expanded;
   @include centered(true);
+  overflow: auto;
 }
