--- a/src/components/AnimationComparisons/styles.module.scss
+++ b/src/components/AnimationComparisons/styles.module.scss
@@ -9,6 +9,7 @@
   padding: 80px;
   box-sizing: border-box;
   font-family: Lato, sans-serif;
+  overflow: auto;
 }
 
 .title {
