--- a/src/components/CanvasDraw/styles.module.scss
+++ b/src/components/CanvasDraw/styles.module.scss
@@ -4,6 +4,7 @@
 .container {
 	@include expanded;
 	@include centered;
+  overflow: hidden;
 }
 
 .canvas {
