--- a/src/components/Cards/styles.module.scss
+++ b/src/components/Cards/styles.module.scss
@@ -6,6 +6,7 @@
   @include centered;
 
   font-family: 'Lato', sans-serif;
+  overflow: auto;
 }
 
 .card {
