--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,11 @@
 html, body {
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
   padding: 0;
   margin: 0;
+}
+
+body {
+  position: fixed;
+  overflow: auto;
 }
